<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AFV</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">The email address entered is invalid, try again</string>
    <string name="error_invalid_password">This password is too short needs to be at least 5 characters long</string>
    <string name="error_incorrect_password">The password entered is incorrect, try again</string>
    <string name="error_field_required">This field is required *</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="title_activity_mbookmain">AFV</string>
    <string name="title_activity_mbookfiles">AFVFiles</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mbookadd">AFVAdd</string>
    <string name="title_activity_mbookfull">AFVKFull</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="Video">Video</string>

    <string name="title_activity_login">Sign in</string>

    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="ok">OK</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="open">Open</string>
    <string name="share">Share</string>
    <string name="create">Create</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="sorting">Sorting</string>
    <string name="preferences">Preferences</string>
    <string name="header1">Settings</string>
    <string name="search">Search</string>

    <string name="action_create_newFolder">Create New Folder</string>
    <string name="action_button_clicked">button clicked</string>

    <string name="error_create_folder">Cannot create New Folder</string>
    <string name="error_request_permission">You need to give access to External Storage</string>
    <string name="error_rename">Cannot rename</string>


    <string name="success_create_folder">Folder created successfully</string>
    <string name="success_rename">Rename successful</string>


    <string name="prompt_create_folder">Enter name of new folder</string>
    <string name="prompt_select_destination">Select a destination</string>
    <string name="prompt_rename_newName">Type the new name</string>
    <string name="prompt_show_hiddenFilers">Show hidden files</string>
    <string name="prompt_sort_order">Sort order</string>
    <string name="prompt_case_sensitivity">Case sensitivity</string>
    <string name="prompt_select_one">Select one</string>
    <string name="prompt_sort_by">Sort files by</string>


    <string name="info_items_selected">items selected</string>
    <string name="info_options">Options</string>
    <string name="info_sorting_option">Click to view preferences</string>
    <string name="info_hiddenFiles_option">Show files starting with \' . \'</string>
    <string name="info_search_view">Search files and folders</string>

    <string name="title_activity_nav">Nav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="files">Files</string>
    <string name="help">HELP</string>
    <string name="logout">LOGOUT</string>
    <string name="login">Login</string>
    <string name="no_account_yet_click_here_to_create_one">No account yet? Click here to create one</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>


    <string-array name="sort_criteria">
        <item>File Name</item>
        <item>Date Modified</item>
        <item>File Size</item>
    </string-array>


    <string-array name="sort_mode">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="map_search">Map Search</string>
    <string name="text_translator">Text Translator</string>
    <string name="enter_text">Enter Text</string>
    <string name="type_here">Type Here</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="save_lap">Save Lap</string>
    <string name="reset">Reset</string>
    <string name="rating_result">23</string>
    <string name="submit">Submit</string>
    <string name="select_your_rating_bar_here">Select Your Rating Bar Here</string>
    <string name="textview">TextView</string>
    <string name="click_to_save_rating_in_textbox">Click To Save Rating In TextBox</string>



    <string name="action_add">Add New</string>
    <string name="action_delete">Delete</string>
    <string name="action_open_in_external">Open Link</string>
    <string name="action_bar_subtitle_showing_all">All saved pages</string>
    <string name="one_search_result">One search result</string>
    <string name="no_search_results">No search results</string>
    <string name="num_search_results">search results</string>
    <string name="no_saved_pages">No Saved Website Pages</string>
    <string name="to_save_a_webpage_choose_share_in_your_web_browser_and_then_choose_save_for_offline">Save a website by going onto internet in the menu, selecting the share feature on the browser to AFV to download and view</string>
    <string name="tip_in_your_web_browser_choose_share_and_then_save_for_offline_to_quickly_save_pages_n_nyou_can_save_multiple_urls_separated_by_newline_n">Tip: In your web browser, choose \'Share\' and then \'Save For Offline\' to quickly save pages.   You can save multiple URLs, separated by newline.</string>
    <string name="http_example_com_example">http://example.com/example</string>
    <string name="url_from_clipboard">URL From Clipboard</string>



    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Login failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not account? Register Here!</string>
    <string name="btn_link_to_login">Already registered. Login Here!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="todo">TODO</string>


</resources>
