<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/texty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:transitionGroup="true"
    tools:context="com.example.michael.afv.AFVTextToSpeech">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:hint="@string/enter_text"
        android:text="@string/type_here"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textColorHint="@color/common_google_signin_btn_text_dark_focused" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        android:background="@color/cardview_dark_background"
        android:text="@string/text_to_speech"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold" />

</RelativeLayout>