<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.mbook.AFVMain">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="413dp"
        android:layout_height="570dp"
        android:background="@drawable/kente"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/FILES"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginTop="28dp"
            android:background="@color/colorPrimary"
            android:baselineAligned="false"
            android:elevation="0dp"
            android:text="@string/files"
            app:layout_constraintEnd_toEndOf="@+id/HELP"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="114dp"
            tools:layout_conversion_absoluteWidth="270dp" />

        <Button
            android:id="@+id/teextspeech"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="65dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="114dp"
            android:background="@color/colorPrimary"
            android:text="@string/text_translator"
            app:layout_constraintBottom_toTopOf="@+id/HELP"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_conversion_absoluteHeight="114dp"
            tools:layout_conversion_absoluteWidth="270dp" />

        <Button
            android:id="@+id/HELP"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="228dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="227dp"
            android:background="@color/colorPrimary"
            android:text="@string/help"
            app:layout_constraintBottom_toBottomOf="@+id/choco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.111"
            tools:layout_conversion_absoluteHeight="114dp"
            tools:layout_conversion_absoluteWidth="270dp" />

        <Button
            android:id="@+id/logout"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="84dp"
            android:background="@color/colorPrimary"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.319"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="114dp"
            tools:layout_conversion_absoluteWidth="270dp" />

        <Button
            android:id="@+id/choco"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_marginBottom="200dp"
            android:layout_marginStart="52dp"
            android:background="@color/colorPrimary"
            android:text="@string/map_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_conversion_absoluteHeight="114dp"
            tools:layout_conversion_absoluteWidth="270dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_anchor="@+id/appBarLayout2"
        app:layout_anchorGravity="right|bottom"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="313dp"
        tools:layout_editor_absoluteY="493dp" />

</android.support.design.widget.CoordinatorLayout>
